[tool.poetry]
name = "pystan"
version = "3.0.0-rc.1"
description = "Python interface to Stan, a package for Bayesian inference"
authors = [
  "Allen Riddell <riddella@indiana.edu>",
  "Ari Hartikainen <ahartikainen@users.noreply.github.com>",
]
license = "ISC"
readme = "README.rst"
homepage = "https://mc-stan.org"
repository = "https://github.com/stan-dev/pystan"
documentation = "https://pystan.readthedocs.io"
packages = [
    { include = "stan" },
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: ISC License (ISCL)",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
httpstan = "^4.3.2"
pysimdjson = "^3.1"
numpy = "^1.7"
clikit = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-asyncio = "^0.10"
pandas = "^1.0"
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.4.2"
mypy = "0.782"
flake8 = "^3.8.3"
# documentation
sphinx = "^3.1"
sphinx-rtd-theme = "^0.5"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "stan,tests"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
