[tool.poetry]
name = "pystan"
version = "3.4.0"
description = "Python interface to Stan, a package for Bayesian inference"
authors = [
  "Allen Riddell <riddella@indiana.edu>",
  "Ari Hartikainen <ahartikainen@users.noreply.github.com>",
  "Matthew Carter <m.j.carter2@liverpool.ac.uk>",
]
license = "ISC"
readme = "README.rst"
homepage = "https://mc-stan.org"
repository = "https://github.com/stan-dev/pystan"
documentation = "https://pystan.readthedocs.io"
packages = [
    { include = "stan" },
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: ISC License (ISCL)",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6"
httpstan = "~4.7"
pysimdjson = "^3.2"
numpy = "^1.19"
clikit = "^0.6"
setuptools = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-asyncio = "^0.10"
pandas = "^1.0"
autoflake = "^1.4"
black = "22.1.0"
isort = "^5.9"
mypy = "0.910"
types-setuptools = "^57.4"
flake8 = "^3.9"
# documentation
sphinx = "^3.5"
sphinx-rtd-theme = "^0.5"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "stan,tests"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
