[metadata]
name = pystan
summary = Python interface to Stan, a package for Bayesian inference
description-file =
    README.rst
author = pystan developers
classifier =
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license_file = LICENSE

[files]
packages =
    stan

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build
